tests/transpiler/x/java/right_join.error
exit status 1
Main.java:26: error: <identifier> expected
         customerName;
                     ^
Main.java:27: error: <identifier> expected
         order;
              ^
Main.java:28: error: <identifier> expected
        Data3( customerName,  order) {
                           ^
Main.java:28: error: <identifier> expected
        Data3( customerName,  order) {
                                   ^
Main.java:35: error: <identifier> expected
         customerName;
                     ^
Main.java:36: error: <identifier> expected
         order;
              ^
Main.java:37: error: <identifier> expected
        Result4( customerName,  order) {
                             ^
Main.java:37: error: <identifier> expected
        Result4( customerName,  order) {
                                     ^
8 errors
